# klarity

./: .gitignore  BESTPRACTICES.md  CHANGELOG.md  ConfigMutator.hs  LICENSE NOTICE  README.md  bors.toml  default.nix  gulpfile.js  installer-clusters.cfg  lib.nix  package.json  release.nix  shell.nix  tbco-nix.json  yarn2nix.nix
ci/: check-hydra.sh
installers/: DarwinLauncher.hs  Installer.hs  README.md  Spec.hs  bcc-configuration.yaml  cabal.project  default.nix  klarity-installer.cabal  klarity-installer.nix  shell.nix  stack.yaml
installers/common/: Config.hs  MacInstaller.hs  Types.hs  Util.hs  WindowsInstaller.hs
installers/data/: Distribution.xml
installers/data/Resources/en.lproj/: conclusion.rtf  welcome.rtf
installers/dhall/: demo.dhall  launcher.dhall  linux64.dhall  macos64.dhall  mainnet.dhall  os.type  shell.nix  staging.dhall  testnet.dhall  win64.dhall
installers/icons/: update_icons
installers/nix/: linux.nix  nix-installer.nix
installers/overlays/: add-test-stubs.nix  nsis.nix  required.nix
nix/: bcc-bridge.nix  darwin-launcher.go  darwin-launcher.nix  launcher-config.nix  selfnode-config.nix  sources.json
scripts/: build-cross-windows.sh  build-installer-nix.sh  build-installer-unix.sh
source/common/config/: electron-store.config.js
source/common/ipc/: api.js  constants.js
source/common/types/: address-introspection.types.js  bcc-node.types.js  electron-store.types.js  environment.types.js  hardware-wallets.types.js  logging.types.js
source/common/utils/: environmentCheckers.js  logging.js  reporting.js
source/main/: config.js  environment.js  index.js  preload.js
source/main/bcc/: BccNode.js  BccSelfnodeLauncher.js  BccWalletLauncher.js  setup.js  utils.js
source/main/ipc/: bcc.ipc.js  get-logs.js  getHardwareWalletChannel.js  getRecoveryWalletIdChannel.js  introspect-address.js
source/main/locales/: en-US.json  ja-JP.json
source/main/menus/: MenuActions.types.js  osx.js  win-linux.js
source/main/utils/: buildAppMenus.js  config.js  logging.js  restoreKeystore.js  safeExitWithCode.js  setupLogging.js
source/main/windows/: windowBounds.js
source/renderer/app/: App.js  ThemeManager.js  index.js
source/renderer/app/actions/: addresses-actions.js  app-actions.js
source/renderer/app/api/: api.js  errors.js  index.js
source/renderer/app/config/: cryptoConfig.js  currencyConfig.coinapi.js  currencyConfig.coingecko.js  currencyConfig.nomics.js  hardwareWalletsConfig.js  news.dummy.json  numbersConfig.js  sidebarConfig.js  stakingConfig.js  stakingStakePools.dummy.json  stakingStakePoolsMissingApiData.dummy.json  urlsConfig.js  votingConfig.js  walletRestoreConfig.js  walletsConfig.js
source/renderer/app/containers/: MainLayout.js  Root.js  TopBarContainer.js
source/renderer/app/domains/: News.js  Wallet.js  WalletAddress.js
source/renderer/app/i18n/: global-messages.js
source/renderer/app/ipc/: bcc.ipc.js  getHardwareWalletChannel.js
source/renderer/app/stores/: AddressesStore.js  AppStore.js  (+14 more)
storybook/: addons.js
storybook/addons/KlarityMenu/: KlarityMenu.js  index.js  register.js
storybook/stories/_support/: StoryDecorator.js  StoryLayout.js  StoryWrapper.js  config.js  utils.js
storybook/stories/common/: Widgets.stories.js
storybook/stories/dapps/: TransactionRequest.stories.js
storybook/stories/navigation/: Sidebar.stories.js  SidebarWalletsMenu.stories.js
storybook/stories/news/: AlertsOverlay.stories.js  AppUpdateOverlay.stories.js  IncidentOverlay.stories.js
storybook/stories/staking/: CountdownParty.stories.js  StakePools.stories.js  Staking.stories.js  Undelegate.stories.js
tests/: .eslintrc  README.md  flow.nix  lint.nix  setup-e2e.js  shellcheck.nix  types.js
tests/news/: README.md
tls/: README.md
utils/api-importer/: cole-wallet-importer.js  itn-cole-wallet-importer.js  itn-sophie -wallet-importer.js  jen-wallet-importer.js  mnemonics.js  quantaverse-wallet-importer.js  sophie -wallet-importer.js  yoroi-wallet-importer.js
utils/bcc/native-tokens/: registry.json
utils/bcc/selfnode/: selfnode-cole-genesis.json  token-metadata.json
(+300 files in other folders)
