name:                klarity-installer
version:             0.1.0.0
synopsis:            Klarity Installer Builder
description:         Please see README.md
license:             Apache-2.0
author:              TBCO
maintainer:          DevOps <devops@blockchain-company.io>
copyright:           2022 TBCO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Types
                   , Config
                   , WindowsInstaller
                   , MacInstaller
                   , RewriteLibs
                   , Util
  ghc-options:         -Wextra -Wno-unused-do-bind -Werror
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010
  hs-source-dirs:    common
  build-depends:       aeson
                     , Glob
                     , base
                     , bytestring
                     , unordered-containers
                     , containers
                     , directory
                     , github
                     , lens-aeson
                     , megaparsec
                     , microlens
                     , network-uri
                     , nsis
                     , optional-args
                     , raw-strings-qq
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , unix
                     , wreq
                     , yaml
                     , zip-archive

executable make-installer
  main-is:             Installer.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , klarity-installer
                     , directory
                     , filepath
                     , foldl
                     , optional-args
                     , optparse-applicative
                     , optparse-generic
                     , split
                     , system-filepath
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings

executable darwin-launcher
  main-is:             DarwinLauncher.hs
  default-language:    Haskell2010
  buildable:           False
  build-depends:       base
                     , turtle
                     , unix
  ghc-options:        -Weverything

test-suite test-make-installer
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:       klarity-installer
                     , base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , foldl
                     , github
                     , hspec
                     , lens-aeson
                     , managed
                     , megaparsec
                     , optional-args
                     , optparse-applicative
                     , optparse-generic
                     , raw-strings-qq
                     , split
                     , system-filepath
                     , temporary
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
